syntax = "proto3";

package MessageBoard.Voting.GRPC;

service VoteService {
    rpc Add(AddRequest) returns (VoteResponse) {}
    rpc Single(SingleRequest) returns (SingleResponse) {}
}

message VoteResponse {
    string optionName = 1;
    uint32 count = 2;
}

message SingleResponse {
    repeated VoteResponse votes = 1;
}

message AddRequest {
    string subjectId = 1;
    string optionName = 2;
}

message SingleRequest {
    string subjectId = 1;
}